--- a/manuscript/components/manuscript2.bib
+++ b/manuscript/components/manuscript2.bib
@@ -29,8 +29,7 @@
   title={Toxic cyanobacteria in water: a guide to their public health consequences, monitoring and management},
   author={Chorus, Edited Ingrid and Bartram, Jamie},
   year={1999},
-  publisher={{World Health Organization}},
-  
+  publisher={{World Health Organization}}
 }
 
 @article{world2003cyanobacterial,
@@ -52,8 +51,8 @@
 }
 
 @misc{HABHRCA2014,
-  title={Harmful Algal Bloom and Hypoxia Research and Control Amendments Act of 2014},
-  author={HABHRCA},
+  title={{Harmful Algal Bloom and Hypoxia Research and Control Amendments Act of 2014. (S. 1254)}},
+  author={Harmful Algal Bloom and Hypoxia Research and Control Amendments Act},
   year={2014},
   url={https://www.congress.gov/113/bills/s1254/BILLS-113s1254enr.pdf}
   }
@@ -81,7 +80,7 @@
 }
 
 @article{lee2000variation,
-  title={Variation of microcystin content of Microcystis aeruginosa relative to medium N: P ratio and growth stage},
+  title={Variation of microcystin content of Microcystis aeruginosa relative to medium N:P ratio and growth stage},
   author={Lee, SJ and Jang, M-H and Kim, H-S and Yoon, B-D and Oh, H-M},
   journal={Journal of Applied Microbiology},
   volume={89},
