--- a/manuscript/f1000_submission/manuscript.Rmd
+++ b/manuscript/f1000_submission/manuscript.Rmd
@@ -226,7 +226,7 @@ In this paper we build on past efforts and utilize the National Lakes Assessment
 
 ##Data
 
-We used the 2007 NLA chlorophyll *a* and microcystin-LR concentration data [@usepa2009national, [NLA](http://www2.epa.gov/national-aquatic-resource-surveys/national-lakes-assessment)]. These data represent a snapshot of water quality from the summer of 2007 for the conterminous United States and were collected as part of an ongoing probabilistic monitoring program [@usepa2009national]. Data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(nla_dat$CHLA,nla_dat$MCYST_TL_UGL))` lakes.  
+We used the 2007 NLA chlorophyll *a* and microcystin-LR concentration data [@usepa2009national, [NLA](http://www2.epa.gov/national-aquatic-resource-surveys/national-lakes-assessment)]. These data represent a snapshot of water quality from the summer of 2007 for the conterminous United States and were collected as part of an ongoing probabilistic monitoring program [@usepa2009national]. Data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(data.frame(nla_dat$CHLA,nla_dat$MCYST_TL_UGL)))` lakes.  
 
 ##Analytical Methods
 
@@ -247,7 +247,7 @@ Lastly, we assess the ability of these chlorophyll *a* thresholds to predict mic
 In the 2007 NLA, microcystin-LR concentrations ranged from `r min(nla_dat$MCYST_TL_UGL,na.rm=T)` to `r max(nla_dat$MCYST_TL_UGL, na.rm=T)` $\mu$g/L.  Microcystin-LR concentrations of 0.05 $\mu$g/L represent the detection limits.  Any value greater than that indicates the presence of microcystin-LR.  Of those lakes with microcystin, the median concentration was `r round(median(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L and the mean was `r round(mean(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L.  Of all lakes sampled, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=0.3])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Child level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1.6])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Adult level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Drinking level, and `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=2])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Recreational level. For chlorophyll *a*, the range was `r min(nla_dat$CHLA,na.rm=T)` to `r max(nla_dat$CHLA, na.rm=T)` $\mu$g/L.  All lakes had reported chlorophyll *a* concentrations that exceeded detection limits.  The median concentration was `r median(nla_dat$CHLA,na.rm=T)` $\mu$g/L and the mean was `r round(mean(nla_dat$CHLA,na.rm=T),2)` $\mu$g/L.  The associations between chlorophyll *a* and the upper confidence interval across a range of conditional probability values are shown in Table \ref{tab:mc_chla_table}.  Specific chlorophyll *a* that are associated with greater than even odds of exceeding the advisory levels were `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`$\mu$g/L for 0.3, 1.0, 1.6, and 2.0 $\mu$g/L advisory levels, respectively (Table \ref{tab:mc_chla_table} & Figure \ref{fig:multi_cp_plot}).   
 
 ```{r epa_child_cp_plot, echo=FALSE, fig.width=6, fig.cap="",warning=FALSE,message=FALSE}
-jpeg(filename = "hollister_microcystin_fig2.jpg",
+jpeg(filename = "hollister_microcystin_fig1.jpg",
        res = 450,
        width = 7.82,
        height = 6.8,
@@ -268,15 +268,15 @@ multiplot(
   cols=2
 )
 x<-dev.off()
-x<-autocrop("hollister_microcystin_fig2.jpg",border = 25, 
-            outfile = "hollister_microcystin_fig2.jpg",
+x<-autocrop("hollister_microcystin_fig1.jpg",border = 25, 
+            outfile = "hollister_microcystin_fig1.jpg",
             width = 6.1,
             res = 450)
 ```
 
 \begin{figure}
 \centering
-\includegraphics[width=0.4\textwidth]{hollister_microcystin_fig2.jpg}
+\includegraphics[width=0.4\textwidth]{hollister_microcystin_fig1.jpg}
 \caption{\label{fig:multi_cp_plot}Conditional probability plots showing association between the probability of exceeding various microcystin-LR (MLR) health advisory Levels. A.) Plot for USEPA Child (0.3 $\mu$g/L). B.) Plot for WHO Drinking (1 $\mu$g/L). C.) Plot for USEPA Adult (1.6 $\mu$g/L). D.) Plot for WHO Recreational (2 $\mu$g/L).  }
 \end{figure}
 
@@ -332,6 +332,7 @@ We would like to thank Anne Kuhn, Bryan Milstead, John Kiddon, Joe LiVolsi, Tim 
 
 #Tables
 
+
 ```{r microcystin_levels,echo=FALSE,results='asis'}
 source_of_stnd <- c("WHO",
                     "WHO",
@@ -347,13 +348,13 @@ type_of_stnd <- c("Recreational: Low Prob. of Effect",
                   "Drinking Water",
                   "Child Drinking Water Advisory",
                   "Adult Drinking Water Advisory")
-concentration <- c("2-4 $mu$g/L",
-                   "10-20 $mu$g/L",
-                   "20-2000 $mu$g/L",
-                   ">2000 $mu$g/L",
-                   "1 $mu$g/L",
-                   "0.3 $mu$g/L",
-                   "1.6 $mu$g/L")
+concentration <- c("2-4 $\\mu$g/L",
+                   "10-20 $\\mu$g/L",
+                   "20-2000 $\\mu$g/L",
+                   ">2000 $\\mu$g/L",
+                   "1 $\\mu$g/L",
+                   "0.3 $\\mu$g/L",
+                   "1.6 $\\mu$g/L")
 #note <- c("Low probability of adverse health effects",
 #          "Moderate probability of adverse health effects",
 #          "High probability of adverse health effects, These higher #concentrations typically only seen in visible scums/algal mats",
@@ -369,10 +370,10 @@ names(mc_conc_table)<-c("Source","Type","Concentration")
 print(xtable::xtable(mc_conc_table,
                      label="microcystin_levels",
                      caption="Various suggested microcystin-LR health advisory 
-                     concentrations."), 
-      include.rownames=FALSE, comment = FALSE,caption.placement = "top")
+                     concentrations from the USEPA and World Health Organization."), 
+      include.rownames=FALSE, comment = FALSE,caption.placement = "top",
+      latex.environments = NULL,sanitize.text.function=identity)
 ```
-
 
 
 ```{r mc_chla_table, results='asis', echo=FALSE}
@@ -386,9 +387,8 @@ print(xtable::xtable(mc_chla_tbl,
                      caption="Chlorophyll \\textit{a} concentrations that are 
                      associated with a 50% probability of exceeding a 
                      microcystin-LR health advisory concentration."),
-      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
+      include.rownames = FALSE, comment = FALSE,caption.placement = "top",latex.environments = NULL)
 ```
-
 
 
 ```{r child_conmat_table, results='asis', echo=FALSE}
@@ -398,9 +398,8 @@ print(xtable::xtable(child_conmat,
                      caption="Confusion matrix comparing chlorophyll \\textit{a} 
                      predicted exceedences (rows) versus real exceedances 
                      (columns) for the USEPA childrens drinking water advisory."),
-      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
+      include.rownames = T, comment = FALSE,caption.placement = "top",latex.environments = NULL)
 ```
-
 
 
 ```{r who_drink_conmat_table, results='asis', echo=FALSE}
@@ -410,9 +409,8 @@ print(xtable::xtable(who_drink_conmat,
                      caption="Confusion matrix comparing chlorophyll \\textit{a} 
                      predicted exceedences (rows) versus real exceedances 
                      (columns) for the WHO drinking water advisory."),
-      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
+      include.rownames = T, comment = FALSE,caption.placement = "top",latex.environments = NULL)
 ```
-
 
 
 ```{r adult_conmat_table, results='asis', echo=FALSE}
@@ -422,9 +420,8 @@ print(xtable::xtable(adult_conmat,
                      caption="Confusion matrix comparing chlorophyll \\textit{a} 
                      predicted exceedences (rows) versus real exceedances 
                      (columns) for the USEPA adult drinking water advisory."),
-      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
+      include.rownames = T, comment = FALSE,caption.placement = "top",latex.environments = NULL)
 ```
-
 
 
 ```{r who_rec_conmat_table, results='asis', echo=FALSE}
@@ -434,10 +431,10 @@ print(xtable::xtable(who_rec_conmat,
                      caption="Confusion matrix comparing chlorophyll \\textit{a} 
                      predicted exceedences (rows) versus real exceedances 
                      (columns) for the WHO recreational water advisory."),
-      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
+      include.rownames = T, comment = FALSE,caption.placement = "top",latex.environments = NULL)
 ```
 
-\newpage
+
 \twocolumn
 
 #References
