--- a/manuscript/f1000_submission/manuscript.bib
+++ b/manuscript/f1000_submission/manuscript.bib
@@ -8,7 +8,7 @@
   }
 
 @article{pip2014microcystin,
-  title={Microcystin and algal chlorophyll in relation to nearshore nutrient concentrations in Lake Winnipeg, Canada},
+  title={Microcystin and algal chlorophyll in relation to nearshore nutrient concentrations in {Lake Winnipeg, Canada}},
   author={Pip, Eva and Bowman, Lindsay},
   journal={Environment and Pollution},
   volume={3},
@@ -18,24 +18,24 @@
 }
 
 @misc{usepa2015drinking,
-  title={Drinking Water Health Advisory for the Cyanobacterial Microcystin Toxins.  EPA-820R15100},
+  title={Drinking Water Health Advisory for the Cyanobacterial Microcystin Toxins.  {EPA-820-R-15100}},
   author={USEPA},
   year={2015},
-  publisher={Office of Water, US Environmental Protection Agency Washington, DC},
+  publisher={{Office of Water, US Environmental Protection Agency, Washington, DC}},
   url={http://www2.epa.gov/sites/production/files/2015-06/documents/microcystins-report-2015.pdf}
 }
 
-@article{chorus1999toxic,
+@book{chorus1999toxic,
   title={Toxic cyanobacteria in water: a guide to their public health consequences, monitoring and management},
   author={Chorus, Edited Ingrid and Bartram, Jamie},
   year={1999},
-  publisher={Citeseer}
+  publisher={{World Health Organization}}
 }
 
 @article{world2003cyanobacterial,
-  title={Cyanobacterial toxins: microcystin-LR in drinking-water. Background document for development of WHO Guidelines for Drinking-water Quality. Geneva, Switzerland},
-  author={World Health Organization},
-  journal={World Health Organization, 2nd ed. Geneva},
+  title={Cyanobacterial toxins: microcystin-{LR} in drinking-water. {B}ackground document for development of {WHO} Guidelines for Drinking-water Quality. {Geneva, Switzerland}},
+  author={{World Health Organization}},
+  journal={{World Health Organization, 2nd ed. Geneva}},
   year={2003}
 }
 
@@ -51,8 +51,8 @@
 }
 
 @misc{HABHRCA2014,
-  title={Harmful Algal Bloom and Hypoxia Research and Control Amendments Act of 2014},
-  author={HABHRCA},
+  title={{Harmful Algal Bloom and Hypoxia Research and Control Amendments Act of 2014. (S. 1254).}},
+  author={Harmful Algal Bloom and Hypoxia Research and Control Amendments Act},
   year={2014},
   url={https://www.congress.gov/113/bills/s1254/BILLS-113s1254enr.pdf}
   }
@@ -738,10 +738,10 @@
 }
 
 @misc{usepa2009national,
-  title={National Lakes Assessment: a collaborative survey of the Nation's lakes. EPA 841-R-09-001},
+  title={National Lakes Assessment: a collaborative survey of the Nation's lakes. {EPA 841-R-09-001}},
   author={USEPA},
   year={2009},
-  publisher={Office of Water and Office of Research and Development, US Environmental Protection Agency Washington, DC}
+  publisher={{Office of Water and Office of Research and Development, US Environmental Protection Agency, Washington, DC}}
 }
 
 @Misc{Altmetrics,
@@ -1289,7 +1289,7 @@
 @article{hollister2008cprob,
   title={CProb: a computational tool for conducting conditional probability analysis},
   author={Hollister, Jeffrey W and Walker, Henry A and Paul, John F},
-  journal={Journal of environmental quality},
+  journal={{Journal of Environmental Quality}},
   volume={37},
   number={6},
   pages={2392--2396},
@@ -1304,5 +1304,6 @@
   publisher={Wiley Online Library},
   volume={41},
   number={5},
-  pages={1211--1223}
+  pages={1211--1223},
+  journal={{Journal of the American Water Resources Association}}
 }
