--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -217,7 +217,7 @@ In this paper we build on past efforts and utilize the National Lakes Assessment
 #Methods
 
 ##Data
-We used the 2007 NLA chlorophyll *a* and microcystin-LR concentration data [@usepa2009national, [NLA](http://www2.epa.gov/national-aquatic-resource-surveys/national-lakes-assessment)]. These data represent a snapshot of water quality from the summer of 2007 for the conterminous United States and were collected as part of an ongoing probabilistic monitoring program [@usepa2009national]. Data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(nla_dat$CHLA,nla_dat$MCYST_TL_UGL))` lakes.  
+We used the 2007 NLA chlorophyll *a* and microcystin-LR concentration data [@usepa2009national, [NLA](http://www2.epa.gov/national-aquatic-resource-surveys/national-lakes-assessment)]. These data represent a snapshot of water quality from the summer of 2007 for the conterminous United States and were collected as part of an ongoing probabilistic monitoring program [@usepa2009national]. Data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(data.frame(nla_dat$CHLA,nla_dat$MCYST_TL_UGL)))` lakes.  
 
 ##Analytical Methods
 We used a conditional probability analysis (CPA) approach to explore associations between chlorophyll *a* concentrations and World Health Organization (WHO) and USEPA microcystin-LR health advisory levels [@paul2011probability].  Many health advisory levels have been suggested (Table \ref{tab:microcystin_levels}), but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)`% of lakes sampled had a concentration greater than 10 $\mu$g/L.  Thus, for this analysis we focused on the microcystin concentrations that are better represented in the NLA data. These were the USEPA children's drinking water advisory level of  0.3 $\mu$g/L (USEPA Child), the WHO drinking water advisory level of 1 $\mu$g/L (WHO Drinking), the USEPA adult drinking water advisory level of 1.6 $\mu$g/L (USEPA Adult), and the WHO recreational, low probability of effect advisory level of 2 $\mu$g/L (WHO Recreational).
@@ -326,7 +326,7 @@ mc_conc_table <- data.frame(source_of_stnd, type_of_stnd, concentration) %>%
   arrange(type_of_stnd)
 names(mc_conc_table)<-c("Source","Type","Concentration")
 #pandoc.table(mc_conc_table,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
-knitr::kable(mc_conc_table,format="latex")
+knitr::kable(mc_conc_table)#,format="latex")
 ```
 
 \newpage
@@ -336,31 +336,31 @@ mc_chla_tbl <- data.frame(seq(0.1,0.9,0.1),mc_chla)
 names(mc_chla_tbl)<-c("Cond. Probability","USEPA Child", "WHO Drink", 
                       "USEPA Adult", "WHO Recreational")
 #pandoc.table(mc_chla_tbl,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
-knitr::kable(mc_chla_tbl,format="latex")
+knitr::kable(mc_chla_tbl)#,format="latex")
 ```
 
 \newpage
 
 ```{r child_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the USEPA childrens drinking water advisory. \\label{tab:child_conmat_table}"}
-knitr::kable(child_conmat,format="latex")
+knitr::kable(child_conmat)#,format="latex")
 ```
 
 \newpage
 
 ```{r who_drink_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the WHO drinking water advisory. \\label{tab:who_drink_conmat_table}"}
-knitr::kable(who_drink_conmat,format="latex")
+knitr::kable(who_drink_conmat)#,format="latex")
 ```
 
 \newpage
 
 ```{r adult_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the USEPA adult drinking water advisory. \\label{tab:adult_conmat_table}"}
-knitr::kable(adult_conmat,format="latex")
+knitr::kable(adult_conmat)#,format="latex")
 ```
 
 \newpage
 
 ```{r who_rec_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the WHO recreational water advisory. \\label{tab:who_rec_conmat_table}"}
-knitr::kable(who_rec_conmat,format="latex")
+knitr::kable(who_rec_conmat)#,format="latex")
 ```
 
 \newpage
