--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -29,6 +29,7 @@
 \fi
 % use microtype if available
 \IfFileExists{microtype.sty}{\usepackage{microtype}}{}
+\usepackage{longtable,booktabs}
 \usepackage{graphicx}
 % Redefine \includegraphics so that, unless explicit options are
 % given, the image width will not exceed the width of the page.
@@ -264,7 +265,7 @@ concentration data {[}13{]}. These data represent a snapshot of water
 quality from the summer of 2007 for the conterminous United States and
 were collected as part of an ongoing probabilistic monitoring program
 {[}13{]}. Data on chlorophyll \emph{a} and microcystin-LR concentrations
-are available for lakes.
+are available for 1028 lakes.
 
 \subsection{Analytical Methods}\label{analytical-methods}
 
@@ -453,130 +454,140 @@ Plot for WHO Recreational (2 \(\mu\)g/L). \label{fig:multi_cp_plot}}
 
 \section{Tables}\label{tables}
 
-\begin{tabular}{l|l|l}
-\hline
-Source & Type & Concentration\\
-\hline
-USEPA & Adult Drinking Water Advisory & 1.6 \$\textbackslash{}mu\$g/L\\
-\hline
-USEPA & Child Drinking Water Advisory & 0.3 \$\textbackslash{}mu\$g/L\\
-\hline
-WHO & Drinking Water & 1 \$\textbackslash{}mu\$g/L\\
-\hline
-WHO & Recreational: High Prob. of Effect & 20-2000 \$\textbackslash{}mu\$g/L\\
-\hline
-WHO & Recreational: Low Prob. of Effect & 2-4 \$\textbackslash{}mu\$g/L\\
-\hline
-WHO & Recreational: Moderate Prob. of Effect & 10-20 \$\textbackslash{}mu\$g/L\\
-\hline
-WHO & Recreational: Very High Prob. of Effect & >2000 \$\textbackslash{}mu\$g/L\\
-\hline
-\end{tabular}
-
-:Various suggested microcystin-LR health advisory concentrations.
-\label{tab:microcystin_levels}
-
-\newpage
-
-\begin{tabular}{r|r|r|r|r}
-\hline
-Cond. Probability & USEPA Child & WHO Drink & USEPA Adult & WHO Recreational\\
-\hline
-0.1 & 0.07 & 0.07 & 0.07 & 1.17\\
-\hline
-0.2 & 0.07 & 4.48 & 10.67 & 18.24\\
-\hline
-0.3 & 2.78 & 17.49 & 31.59 & 50.26\\
-\hline
-0.4 & 9.97 & 38.73 & 69.19 & 76.80\\
-\hline
-0.5 & 21.92 & 77.20 & 84.96 & 105.84\\
-\hline
-0.6 & 38.73 & 103.20 & 133.20 & 228.24\\
-\hline
-0.7 & 63.94 & 138.24 & 244.80 & 871.20\\
-\hline
-0.8 & 113.14 & 326.88 & 326.88 & 871.20\\
-\hline
-0.9 & 166.63 & 516.00 & 871.20 & 871.20\\
-\hline
-\end{tabular}
-
-:Chlorophyll \textit{a} concentrations that are associated with a 50\%
-probability of exceeding a microcystin-LR health advisory concentration.
-\label{tab:mc_chla_table}
+\begin{longtable}[c]{@{}lll@{}}
+\caption{Various suggested microcystin-LR health advisory
+concentrations. \label{tab:microcystin_levels}}\tabularnewline
+\toprule
+Source & Type & Concentration\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+Source & Type & Concentration\tabularnewline
+\midrule
+\endhead
+USEPA & Adult Drinking Water Advisory & 1.6 \(\mu\)g/L\tabularnewline
+USEPA & Child Drinking Water Advisory & 0.3 \(\mu\)g/L\tabularnewline
+WHO & Drinking Water & 1 \(\mu\)g/L\tabularnewline
+WHO & Recreational: High Prob. of Effect & 20-2000
+\(\mu\)g/L\tabularnewline
+WHO & Recreational: Low Prob. of Effect & 2-4 \(\mu\)g/L\tabularnewline
+WHO & Recreational: Moderate Prob. of Effect & 10-20
+\(\mu\)g/L\tabularnewline
+WHO & Recreational: Very High Prob. of Effect & \textgreater{}2000
+\(\mu\)g/L\tabularnewline
+\bottomrule
+\end{longtable}
 
 \newpage
 
-\begin{tabular}{l|r|r|r}
-\hline
-  & Not Exceed & Exceed & Row Totals\\
-\hline
-Not Exceed & 638 & 93 & 731\\
-\hline
-Exceed & 173 & 124 & 297\\
-\hline
-Column Totals & 811 & 217 & 1028\\
-\hline
-\end{tabular}
-
-:Confusion matrix comparing chlorophyll \textit{a} predicted exceedences
-(rows) versus real exceedances (columns) for the USEPA childrens
-drinking water advisory. \label{tab:child_conmat_table}
-
-\newpage
-
-\begin{tabular}{l|r|r|r}
-\hline
-  & Not Exceed & Exceed & Row Totals\\
-\hline
-Not Exceed & 850 & 82 & 932\\
-\hline
-Exceed & 57 & 39 & 96\\
-\hline
-Column Totals & 907 & 121 & 1028\\
-\hline
-\end{tabular}
-
-:Confusion matrix comparing chlorophyll \textit{a} predicted exceedences
-(rows) versus real exceedances (columns) for the WHO drinking water
-advisory. \label{tab:who_drink_conmat_table}
+\begin{longtable}[c]{@{}rrrrr@{}}
+\caption{Chlorophyll \textit{a} concentrations that are associated with
+a 50\% probability of exceeding a microcystin-LR health advisory
+concentration. \label{tab:mc_chla_table}}\tabularnewline
+\toprule
+Cond. Probability & USEPA Child & WHO Drink & USEPA Adult & WHO
+Recreational\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+Cond. Probability & USEPA Child & WHO Drink & USEPA Adult & WHO
+Recreational\tabularnewline
+\midrule
+\endhead
+0.1 & 0.07 & 0.07 & 0.07 & 1.17\tabularnewline
+0.2 & 0.07 & 4.48 & 10.67 & 18.24\tabularnewline
+0.3 & 2.78 & 17.49 & 31.59 & 50.26\tabularnewline
+0.4 & 9.97 & 38.73 & 69.19 & 76.80\tabularnewline
+0.5 & 21.92 & 77.20 & 84.96 & 105.84\tabularnewline
+0.6 & 38.73 & 103.20 & 133.20 & 228.24\tabularnewline
+0.7 & 63.94 & 138.24 & 244.80 & 871.20\tabularnewline
+0.8 & 113.14 & 326.88 & 326.88 & 871.20\tabularnewline
+0.9 & 166.63 & 516.00 & 871.20 & 871.20\tabularnewline
+\bottomrule
+\end{longtable}
 
 \newpage
 
-\begin{tabular}{l|r|r|r}
-\hline
-  & Not Exceed & Exceed & Row Totals\\
-\hline
-Not Exceed & 887 & 57 & 944\\
-\hline
-Exceed & 50 & 34 & 84\\
-\hline
-Column Totals & 937 & 91 & 1028\\
-\hline
-\end{tabular}
-
-:Confusion matrix comparing chlorophyll \textit{a} predicted exceedences
-(rows) versus real exceedances (columns) for the USEPA adult drinking
-water advisory. \label{tab:adult_conmat_table}
+\begin{longtable}[c]{@{}lrrr@{}}
+\caption{Confusion matrix comparing chlorophyll \textit{a} predicted
+exceedences (rows) versus real exceedances (columns) for the USEPA
+childrens drinking water advisory.
+\label{tab:child_conmat_table}}\tabularnewline
+\toprule
+& Not Exceed & Exceed & Row Totals\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+& Not Exceed & Exceed & Row Totals\tabularnewline
+\midrule
+\endhead
+Not Exceed & 638 & 93 & 731\tabularnewline
+Exceed & 173 & 124 & 297\tabularnewline
+Column Totals & 811 & 217 & 1028\tabularnewline
+\bottomrule
+\end{longtable}
 
 \newpage
 
-\begin{tabular}{l|r|r|r}
-\hline
-  & Not Exceed & Exceed & Row Totals\\
-\hline
-Not Exceed & 910 & 52 & 962\\
-\hline
-Exceed & 43 & 23 & 66\\
-\hline
-Column Totals & 953 & 75 & 1028\\
-\hline
-\end{tabular}
+\begin{longtable}[c]{@{}lrrr@{}}
+\caption{Confusion matrix comparing chlorophyll \textit{a} predicted
+exceedences (rows) versus real exceedances (columns) for the WHO
+drinking water advisory.
+\label{tab:who_drink_conmat_table}}\tabularnewline
+\toprule
+& Not Exceed & Exceed & Row Totals\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+& Not Exceed & Exceed & Row Totals\tabularnewline
+\midrule
+\endhead
+Not Exceed & 850 & 82 & 932\tabularnewline
+Exceed & 57 & 39 & 96\tabularnewline
+Column Totals & 907 & 121 & 1028\tabularnewline
+\bottomrule
+\end{longtable}
 
-:Confusion matrix comparing chlorophyll \textit{a} predicted exceedences
-(rows) versus real exceedances (columns) for the WHO recreational water
-advisory. \label{tab:who_rec_conmat_table}
+\newpage
+
+\begin{longtable}[c]{@{}lrrr@{}}
+\caption{Confusion matrix comparing chlorophyll \textit{a} predicted
+exceedences (rows) versus real exceedances (columns) for the USEPA adult
+drinking water advisory. \label{tab:adult_conmat_table}}\tabularnewline
+\toprule
+& Not Exceed & Exceed & Row Totals\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+& Not Exceed & Exceed & Row Totals\tabularnewline
+\midrule
+\endhead
+Not Exceed & 887 & 57 & 944\tabularnewline
+Exceed & 50 & 34 & 84\tabularnewline
+Column Totals & 937 & 91 & 1028\tabularnewline
+\bottomrule
+\end{longtable}
+
+\newpage
+
+\begin{longtable}[c]{@{}lrrr@{}}
+\caption{Confusion matrix comparing chlorophyll \textit{a} predicted
+exceedences (rows) versus real exceedances (columns) for the WHO
+recreational water advisory.
+\label{tab:who_rec_conmat_table}}\tabularnewline
+\toprule
+& Not Exceed & Exceed & Row Totals\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+& Not Exceed & Exceed & Row Totals\tabularnewline
+\midrule
+\endhead
+Not Exceed & 910 & 52 & 962\tabularnewline
+Exceed & 43 & 23 & 66\tabularnewline
+Column Totals & 953 & 75 & 1028\tabularnewline
+\bottomrule
+\end{longtable}
 
 \newpage
 
@@ -592,8 +603,8 @@ al. (2009) Lake erie microcystis: Relationship between microcystin
 production, dynamics of genotypes and environmental parameters in a
 large lake. Harmful Algae 8: 665--673.
 
-3. HABHRCA (2014) Harmful algal bloom and hypoxia research and control
-amendments act of 2014. Available:
+3. Bloom HA, Research H, Act CA (2014) Harmful Algal Bloom and Hypoxia
+Research and Control Amendments Act of 2014. (S. 1254). Available:
 \url{https://www.congress.gov/113/bills/s1254/BILLS-113s1254enr.pdf}.
 
 4. McElhiney J, Lawton LA (2005) Detection of the cyanobacterial
@@ -606,16 +617,17 @@ freshwater environments. Journal of Toxicology and Environmental Health,
 Part B 8: 1--37.
 
 6. USEPA (2015) Drinking water health advisory for the cyanobacterial
-microcystin toxins. ePA-820R15100. Available:
+microcystin toxins. EPA-820-R-15100. Available:
 \url{http://www2.epa.gov/sites/production/files/2015-06/documents/microcystins-report-2015.pdf}.
 
-7. Organization WH (2003) Cyanobacterial toxins: Microcystin-lR in
-drinking-water. background document for development of wHO guidelines
-for drinking-water quality. geneva, switzerland. World Health
-Organization, 2nd ed. Geneva.
+7. World Health Organization (2003) Cyanobacterial toxins:
+Microcystin-LR in drinking-water. Background document for development of
+WHO guidelines for drinking-water quality. Geneva, Switzerland. World
+Health Organization, 2nd ed. Geneva.
 
 8. Chorus EI, Bartram J (1999) Toxic cyanobacteria in water: A guide to
-their public health consequences, monitoring and management.
+their public health consequences, monitoring and management. World
+Health Organization.
 
 9. James R, Gregg A, Dindal A, McKernan J (2011) Environmental
 technology verification report: Abraxis microcystin test kits. Online
@@ -626,7 +638,7 @@ of three field test kits to detect microcystins from a public health
 perspective. Harmful Algae 42: 34--42.
 
 11. Pip E, Bowman L (2014) Microcystin and algal chlorophyll in relation
-to nearshore nutrient concentrations in lake winnipeg, canada.
+to nearshore nutrient concentrations in Lake Winnipeg, Canada.
 Environment and Pollution 3: p36.
 
 12. Yuan LL, Pollard AI, Pather S, Oliver JL, D'Anglada L (2014)
@@ -634,7 +646,7 @@ Managing microcystin: Identifying national-scale thresholds for total
 nitrogen and chlorophyll a. Freshwater Biology 59: 1970--1981.
 
 13. USEPA (2009) National lakes assessment: A collaborative survey of
-the nation's lakes. ePA 841-r-09-001.
+the nation's lakes. EPA 841-R-09-001.
 
 14. Paul JF, Munns WR (2011) Probability surveys, conditional
 probability, and ecological risk assessment. Environmental Toxicology
@@ -642,11 +654,12 @@ and Chemistry 30: 1488--1495.
 
 15. Paul JF, McDonald ME (2005) Development of empirical, geographically
 specific water quality criteria: A conditional probability analysis
-approach. 41: 1211--1223.
+approach. Journal of the American Water Resources Association 41:
+1211--1223.
 
 16. Hollister JW, Walker HA, Paul JF (2008) CProb: A computational tool
 for conducting conditional probability analysis. Journal of
-environmental quality 37: 2392--2396.
+Environmental Quality 37: 2392--2396.
 
 17. Miller TR, Beversdorf L, Chaston SD, McMahon KD (2013)
 Spatiotemporal molecular analysis of cyanobacteria blooms reveals
