--- a/manuscript/f1000_submission/manuscript.tex
+++ b/manuscript/f1000_submission/manuscript.tex
@@ -307,7 +307,7 @@ Laboratory, US Environmental Protection Agency.
 \begin{table}[ht]
 \caption{Various suggested microcystin-LR health advisory 
                      concentrations from the USEPA and World Health Organization.} 
-\label{microcystin_levels}
+\label{tab:microcystin_levels}
 \begin{tabular}{lll}
   \hline
 Source & Type & Concentration \\ 
@@ -327,7 +327,7 @@ USEPA & Adult Drinking Water Advisory & 1.6 $\mu$g/L \\
 \caption{Chlorophyll \textit{a} concentrations that are 
                      associated with a 50% probability of exceeding a 
                      microcystin-LR health advisory concentration.} 
-\label{mc_chla_table}
+\label{tab:mc_chla_table}
 \begin{tabular}{rrrrr}
   \hline
 Cond. Probability & USEPA Child & WHO Drink & USEPA Adult & WHO Recreational \\ 
@@ -349,7 +349,7 @@ Cond. Probability & USEPA Child & WHO Drink & USEPA Adult & WHO Recreational \\
 \caption{Confusion matrix comparing chlorophyll \textit{a} 
                      predicted exceedences (rows) versus real exceedances 
                      (columns) for the USEPA childrens drinking water advisory.} 
-\label{child_conmat_table}
+\label{tab:child_conmat_table}
 \begin{tabular}{rrrr}
   \hline
  & Not Exceed & Exceed & Row Totals \\ 
@@ -365,7 +365,7 @@ Not Exceed & 649 &  96 & 745 \\
 \caption{Confusion matrix comparing chlorophyll \textit{a} 
                      predicted exceedences (rows) versus real exceedances 
                      (columns) for the WHO drinking water advisory.} 
-\label{who_drink_conmat_table}
+\label{tab:who_drink_conmat_table}
 \begin{tabular}{rrrr}
   \hline
  & Not Exceed & Exceed & Row Totals \\ 
@@ -381,7 +381,7 @@ Not Exceed & 839 &  77 & 916 \\
 \caption{Confusion matrix comparing chlorophyll \textit{a} 
                      predicted exceedences (rows) versus real exceedances 
                      (columns) for the USEPA adult drinking water advisory.} 
-\label{adult_conmat_table}
+\label{tab:adult_conmat_table}
 \begin{tabular}{rrrr}
   \hline
  & Not Exceed & Exceed & Row Totals \\ 
@@ -397,7 +397,7 @@ Not Exceed & 883 &  57 & 940 \\
 \caption{Confusion matrix comparing chlorophyll \textit{a} 
                      predicted exceedences (rows) versus real exceedances 
                      (columns) for the WHO recreational water advisory.} 
-\label{who_rec_conmat_table}
+\label{tab:who_rec_conmat_table}
 \begin{tabular}{rrrr}
   \hline
  & Not Exceed & Exceed & Row Totals \\ 
