--- a/manuscript/f1000_submission/manuscript.tex
+++ b/manuscript/f1000_submission/manuscript.tex
@@ -29,31 +29,32 @@ Cyanobacteria harmful algal blooms (cHABs) are associated with a wide
 range of adverse health effects that stem mostly from the presence of
 cyanotoxins. To help protect against these impacts, several health
 advisory levels have been set for some toxins. In particular, one of the
-more common toxins, microcystin, has several advisory levels set for
+more common toxins, microcystin-LR, has several advisory levels set for
 drinking water and recreational use. However, compared to other water
-quality measures, field measurements of microcystin are not commonly
+quality measures, field measurements of microcystin-LR are not commonly
 available due to cost and advanced understanding required to interpret
 results. Addressing these issues will take time and resources. Thus,
-there is utility in finding indicators of microcystin that are already
-widely available, can be estimated quickly and in situ, and used as a
-first defense against high levels of microcystin. Chlorophyll \emph{a}
-is commonly measured, can be estimated \emph{in situ}, and has been
-shown to be positively associated with microcystin. In this paper, we
-use this association to provide estimates of chlorophyll a
-concentrations that are indicative of a higher probability of exceeding
-select health advisory concentrations for microcystin-LR. Using the 2007
-National Lakes Assessment and a conditional probability approach, we
-identify chlorophyll \emph{a} concentrations that are more likely than
-not to be associated with an exceedance of a microcystin health advisory
-level. We look at the recent US EPA health advisories for drinking water
-as well as the World Health Organization levels for drinking water and
-recreational use and identify a range of chlorophyll \emph{a}
-thresholds. A 50\% chance of exceeding one of the specific advisory
-microcystin concentrations of 0.3, 1, 1.6, and 2 g/L is associatied with
-chlorophyll \emph{a} concentration thresholds of 24.64, 65.6, 89.71, and
-94.93, respectively. When managing for these various microcystin levels,
-exceeding these reported chlorophyll \emph{a} concentrations should be a
-trigger for further testing and possible management action.
+there is utility in finding indicators of microcystin-LR that are
+already widely available, can be estimated quickly and in situ, and used
+as a first defense against high concentrations of microcystin-LR.
+Chlorophyll \emph{a} is commonly measured, can be estimated \emph{in
+situ}, and has been shown to be positively associated with
+microcystin-LR. In this paper, we use this association to provide
+estimates of chlorophyll \emph{a} concentrations that are indicative of
+a higher probability of exceeding select health advisory concentrations
+for microcystin-LR. Using the 2007 National Lakes Assessment and a
+conditional probability approach, we identify chlorophyll \emph{a}
+concentrations that are more likely than not to be associated with an
+exceedance of a microcystin-LR health advisory level. We look at the
+recent US EPA health advisories for drinking water as well as the World
+Health Organization levels for drinking water and recreational use and
+identify a range of chlorophyll \emph{a} thresholds. A 50\% chance of
+exceeding one of the specific advisory microcystin-LR concentrations of
+0.3, 1, 1.6, and 2 g/L is associatied with chlorophyll \emph{a}
+concentration thresholds of 24.64, 65.6, 89.71, and 94.93, respectively.
+When managing for these various microcystin-LR levels, exceeding these
+reported chlorophyll \emph{a} concentrations should be a trigger for
+further testing and possible management action.
 
 \end{abstract}
 
